--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,17 @@
   <meta charset="utf-8">
   <title>Angular2Retailapp</title>
   <base href="/">
+  <link rel="stylesheet" href="assets/css/material.min.css"/>
+  <script src="assets/css/material.min.js" ></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+
+ <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+      <app-root class="mdl-layout mdl-js-layout mdl-layout--fixed-header"></app-root>
 </body>
 </html>
